2010-11-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (gids_create, _gids_update): Fixed do_group_stat
	  not being protected by the gids mutex.  A minor race-condition
	  could occur if a SIGHUP was received towards the beginning of
	  _gids_update().  Now the mutex is held while do_group_stat is copied.
	  And since the mutex is being acquired at the top of _gids_update,
	  t_last_update has been moved into the gids struct as well.

2010-11-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/gids.c (_gids_hash_create): Minor cosmetic changes.

	* src/munged/gids.c (_gids_user_to_uid): Made errors inserting into the
	  uid hash nonfatal since they are just a performance optimization.

	* src/munged/gids.c: Minor cosmetic changes.

	* src/munged/gids.h (gids_is_member): Fixed comment.

	* : Re-bootstrap'd with autoconf-2.67.

2010-09-21  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munge/munge.1.in, src/munge/remunge.1.in, src/munge/unmunge.1.in,
	  src/libmunge/munge.3.in, src/libmunge/munge_ctx.3.in,
	  src/libmunge/munge_enum.3.in, src/libcommon/munge.7.in,
	  src/munged/munged.8.in: Tweaked manpages.  Updated content.
	  Fixed typos and formatting.

	* README: Tweaked usage formatting.

	* src/libcommon/license.c: Tweaked spacing in license_text[].

2010-09-08  Chris Dunlap  <cdunlap@llnl.gov>

	* : Replaced _cipher_map_enum() & _md_map_enum() case statements with
	  static array lookups resulting in a slight performance improvement.
	  The cipher_init_subsystem() & md_init_subsystem() routines were added
	  to initialize these static arrays before race conditions could arise.
	* src/munged/crypto.c (crypto_init):
	  Added calls to cipher_init_subsystem() & md_init_subsystem().
	* src/munged/cipher.c: Added _cipher_is_initialized flag & asserts.
	  Added cipher_init_subsystem().  Replaced _cipher_map_enum() case
	  statement with _cipher_map[] array lookup for Libgcrypt & OpenSSL.
	* src/munged/cipher.h: Added prototype for cipher_init_subsystem().